src/test/deca/codegen/valid/homemade/object_copy.deca
// Description:
//    tests, given in the subject with the .ass output they're supposed to build
//
// Results:
//      4 ; 4
//
// History:
//    cree le 24/01/2020


class P {
    int x;
}

{
    P p1 = new P();
    P p2 = p1;

    p1.x = 4;

    println(p1.x, " ; ", p2.x);

    1 + 1;
}